# mcp_server

./: .gitignore  001_claude_api.ipynb  001_prompt_evals.ipynb  001_requests.ipynb  dataset.json  mcp.json  notes.txt  output.html  output.json  pyproject.toml  weather.py
RAG/: 003_vectordb.ipynb
advanced_mcp/: main.py
anthropic/: 001_prompt_evals.ipynb  001_prompting.ipynb  dataset.json  dataset_prompt_engineering.json
anthropic/RAG/: 002_embeddings.ipynb
anthropic/text_editor/: 005_text_editor_tool.ipynb  main.py
anthropic/thinking/: 001_thinking.ipynb
anthropic/tool_use_with_claude/: 001_tools.ipynb  003_tool_streaming.ipynb
backend/advanced_mcp/: main.py  notes.txt
custom_mcp/: main.py  notes.txt  sticky_notes.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
tool_use_with_claude/: 001_tools.ipynb
web_search/: 006_web_search.ipynb
