[project]
name = "weather"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "httpx>=0.28.1",
    "anthropic>=0.84.0,<0.85.0",
    "python-dotenv>=1.2.1,<2.0.0",
    "requests>=2.32.5",
    "voyageai>=0.3.7",
    "dotenv>=0.9.9",
    "fastmcp>=3.1.1",
]
